Ask overwrite confirmation when extracting files with drag&drop

Based on FR commit: 8e2f58d8a56eb2dd27448274c732d3f0324401b5
From: Paolo Bacchilega <paobac@src.gnome.org>
Gnome bug: http://bugzilla.gnome.org/show_bug.cgi?id=590609